explore: essence of linked lists

--- a/day3-Singly Linked List/singly-linked-list.ipynb
+++ b/day3-Singly Linked List/singly-linked-list.ipynb
@@ -9,19 +9,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3a1fbfda",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### Why Linked Lists?\n",
+    "Linked lists were created to overcome various drawbacks associated with storing data in regular lists and arrays, as outlined below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a81d2af",
+   "metadata": {},
+   "source": [
+    "**Ease of insertion and deletion**\n",
+    "\n",
+    "In lists, inserting or deleting an element at any position other than the end requires shifting all the subsequent items to a different position. This process has a time complexity of O(n) and can significantly degrade performance, especially as the list size grows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a5c95d6",
+   "metadata": {},
+   "source": [
+    "Linked lists, however, operate differently. They store elements in various, non-contiguous memory locations and connect them through pointers to subsequent nodes. This structure allows linked lists to add or remove elements at any position by simply modifying the links to include a new element or bypass the deleted one.\n",
+    "\n",
+    "Once the position of the element is identified and there is direct access to the point of insertion or deletion, adding or removing nodes can be achieved in O(1) time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e927d9e9",
+   "metadata": {},
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a81d2af",
+   "cell_type": "markdown",
+   "id": "3d613ac2",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
