explore: dynamic size of lists

--- a/day3-Singly Linked List/singly-linked-list.ipynb
+++ b/day3-Singly Linked List/singly-linked-list.ipynb
@@ -41,7 +41,15 @@
    "cell_type": "markdown",
    "id": "e927d9e9",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Dynamic size**\n",
+    "\n",
+    "Python lists are dynamic arrays, which means that they provide the flexibility to modify size.\n",
+    "\n",
+    "However, this process involves a series of complex operations, including reallocating the array to a new, larger memory block. Such reallocation is inefficient since elements are copied over to a new block, potentially allocating more space than is immediately necessary.\n",
+    "\n",
+    "In contrast, linked lists can grow and shrink dynamically without the need for reallocation or resizing. This makes them a preferable option for tasks that require high flexibility."
+   ]
   },
   {
    "cell_type": "markdown",
