explore: memory management by list and linked list: memory effiiciency

--- a/day3-Singly Linked List/singly-linked-list.ipynb
+++ b/day3-Singly Linked List/singly-linked-list.ipynb
@@ -55,6 +55,18 @@
    "cell_type": "markdown",
    "id": "3d613ac2",
    "metadata": {},
+   "source": [
+    "**Memory efficiency**\n",
+    "\n",
+    "Lists allocate memory for all of its elements in a contiguous block. If a list needs to grow beyond its initial size, it must allocate a new, larger block of contiguous memory and then copy all existing elements to this new block. This process is time-consuming and inefficient, especially for large lists. On the other hand, if the initial size of the list is overestimated, the unused memory is wasted.\n",
+    "\n",
+    "`In contrast`, linked lists allocate memory for each element separately. This structure leads to better memory utilization since memory for new elements can be allocated as they are added."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ea82bf5",
+   "metadata": {},
    "source": []
   }
  ],
