explore: when should you use linked lists

--- a/day3-Singly Linked List/singly-linked-list.ipynb
+++ b/day3-Singly Linked List/singly-linked-list.ipynb
@@ -67,6 +67,23 @@
    "cell_type": "markdown",
    "id": "4ea82bf5",
    "metadata": {},
+   "source": [
+    "#### When Should You Use Linked Lists?\n",
+    "\n",
+    "While linked lists provide certain benefits over regular lists and arrays, such as dynamic size and memory efficiency, they also have their limitations. Since pointers for each element must be stored to reference the next node, the memory usage per element is higher when using linked lists. Also, this data structure does not allow direct access to data. Accessing an element requires sequential traversal from the beginning of the list, resulting in O(n) search time complexity.\n",
+    "\n",
+    "The choice between using a linked list or an array depends on the specific needs of the application. Linked lists are most useful when:\n",
+    "\n",
+    "- You need to frequently insert and delete many elements\n",
+    "- The data size is unpredictable or likely to change frequently\n",
+    "- Direct access to elements is not a requirement\n",
+    "- The dataset contains large elements or structures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08fe9e86",
+   "metadata": {},
    "source": []
   }
  ],
