add diagram of singly linked list

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -84,6 +84,42 @@
    "cell_type": "markdown",
    "id": "08fe9e86",
    "metadata": {},
+   "source": [
+    "#### Types of linked lists\n",
+    "\n",
+    "There are three types of linked lists, each offering unique advantages for different scenarios. These types are:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5baaa1f",
+   "metadata": {},
+   "source": [
+    "**Singly-linked lists**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab97a722",
+   "metadata": {},
+   "source": [
+    "![Alt Text](/Users/dilliramchaudhary/DSA-with-Python/day3-Singly_Linked_List/singly_linked_list.avif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32166d40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffee5b92",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -94,7 +130,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
