explore: node and its parts: Data and next pointer in simply linked list

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -107,12 +107,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "32166d40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A singly-linked list is the simplest type of linked list, where each node contains some data and a reference to the next node in the sequence. They can only be traversed in a single direction - from the head (the first node) to the tail (the last node).\n",
+    "\n",
+    "Each node in a singly-linked list typically consists of two parts:\n",
+    "\n",
+    "- `Data`: The actual information stored in the node.\n",
+    "\n",
+    "- `Next Pointer`: A reference to the next node. The last node’s next pointer is usually set to null.\n",
+    "Since these data structures can only be traversed in a single direction, accessing a specific element by value or index requires starting from the head and sequentially moving through the nodes until the desired node is found. This operation has a time complexity of O(n), making it less efficient for large lists.\n",
+    "\n",
+    "Inserting and deleting a node at the beginning of a singly-linked list is highly efficient with a time complexity of O(1). However, insertion and deletion in the middle or at the end requires traversing the list until that point, leading to an O(n) time complexity.\n",
+    "\n",
+    "The design of singly-linked lists makes them a useful data structure when performing operations that occur at the beginning of the list.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
