explore: array vs list definition

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a6f0b937",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**❇️ Array:**\n",
+    "\n",
+    "- An array is a data structure that stores elements of the same type in contiguous memory locations.\n",
+    "Arrays are efficient for index-based access and mathematical operations.\n",
+    "\n",
+    "**❇️ List:**\n",
+    "\n",
+    "- A list in Python is a dynamic array — it can store different data types, and its size can change (grow or shrink) during runtime."
+   ]
   },
   {
    "cell_type": "code",
