--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -5,7 +5,9 @@
    "id": "2a244d60",
    "metadata": {},
    "source": [
-    "**A linked list** is a data structure that plays a crucial role in data organization and management. It contains a series of nodes that are stored at random locations in memory, allowing for efficient memory management. Each node in a linked list contains two main components: the data part and a reference to the next node in the sequence."
+    "### Linked List\n",
+    "\n",
+    "- **A linked list** is a data structure that plays a crucial role in data organization and management. It contains a series of nodes that are stored at random locations in memory, allowing for efficient memory management. Each node in a linked list contains two main components: the data part and a reference to the next node in the sequence."
    ]
   },
   {
@@ -22,7 +24,7 @@
    "id": "3a81d2af",
    "metadata": {},
    "source": [
-    "**Ease of insertion and deletion**\n",
+    "**✅ Ease of insertion and deletion**\n",
     "\n",
     "In lists, inserting or deleting an element at any position other than the end requires shifting all the subsequent items to a different position. This process has a time complexity of O(n) and can significantly degrade performance, especially as the list size grows."
    ]
@@ -42,7 +44,7 @@
    "id": "e927d9e9",
    "metadata": {},
    "source": [
-    "**Dynamic size**\n",
+    "**✅ Dynamic size**\n",
     "\n",
     "Python lists are dynamic arrays, which means that they provide the flexibility to modify size.\n",
     "\n",
@@ -56,7 +58,7 @@
    "id": "3d613ac2",
    "metadata": {},
    "source": [
-    "**Memory efficiency**\n",
+    "**✅ Memory efficiency**\n",
     "\n",
     "Lists allocate memory for all of its elements in a contiguous block. If a list needs to grow beyond its initial size, it must allocate a new, larger block of contiguous memory and then copy all existing elements to this new block. This process is time-consuming and inefficient, especially for large lists. On the other hand, if the initial size of the list is overestimated, the unused memory is wasted.\n",
     "\n",
