explore: main differences between array and list

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -16,11 +16,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "86b234b2",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**⚙️ 2. Difference Between Array and List**\n",
+    "\n",
+    "| Feature           | Array (`array` module)          | List                          |\n",
+    "| ----------------- | ------------------------------- | ----------------------------- |\n",
+    "| Type restriction  | Homogeneous (same type)         | Heterogeneous (mixed types)   |\n",
+    "| Memory efficiency | More memory-efficient           | Less memory-efficient         |\n",
+    "| Speed             | Faster for numeric computation  | Slower for large numeric data |\n",
+    "| Import needed     | Yes (`from array import array`) | No                            |\n",
+    "| Syntax            | `array('i', [1,2,3])`           | `[1,2,3]`                     |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e3ebdf8",
+   "metadata": {},
    "source": []
   }
  ],
