--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -32,9 +32,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "6e3ebdf8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array:  array('i', [1, 2, 3, 4, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating Arrays\n",
+    "\n",
+    "from array import array\n",
+    "\n",
+    "\n",
+    "# integer array\n",
+    "arr = array('i', [1,2,3,4,5])\n",
+    "print(\"Array: \", arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ab35678",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -45,7 +72,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
