explore: access to the elements of the array

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6e3ebdf8",
    "metadata": {},
    "outputs": [
@@ -58,8 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7ab35678",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "array('i', [1, 2, 3])\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access element\n",
+    "\n",
+    "print(arr[0])           # first element\n",
+    "print(arr[0:3])         # slicing on index\n",
+    "print(arr[-1])          # last element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68daa50e",
    "metadata": {},
    "outputs": [],
    "source": []
