explore: replace an element of same type is allowed

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -85,6 +85,27 @@
    "execution_count": null,
    "id": "68daa50e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('i', [9, 2, 3, 4, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try to replace an element of array of same type\n",
+    "\n",
+    "arr[0] = 9\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b41228c7",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
