explore:heterogeneous data are allowed in a list

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -126,9 +126,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb3b5b62",
+   "metadata": {},
+   "source": [
+    "#### Observation:\n",
+    "\n",
+    "- only homogeneous type of data are allowed in an array to be stored."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d20a220d",
+   "metadata": {},
+   "source": [
+    "#### List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "83a06edf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List: [1, 'Python', 3.14, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mixed data types allowed\n",
+    "\n",
+    "lst = [1, \"Python\", 3.14, True]         # heterogenous data are allowed\n",
+    "print(\"List:\", lst)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb3b5b62",
+   "id": "593bc836",
    "metadata": {},
    "outputs": [],
    "source": []
