access list elements

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -166,8 +166,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "593bc836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access elements\n",
+    "\n",
+    "mylst = [10, 20, 30, 40]\n",
+    "print(mylst[0])   # 10\n",
+    "print(mylst[-1])  # 40\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a72b7e4c",
    "metadata": {},
    "outputs": [],
    "source": []
