explore: built-in list methods

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -188,11 +188,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a72b7e4c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**⚡ Built-in List Methods**\n",
+    "\n",
+    "| Method             | Description             | Example               |\n",
+    "| ------------------ | ----------------------- | --------------------- |\n",
+    "| `append(x)`        | Add an item to the end  | `lst.append(10)`      |\n",
+    "| `extend(iterable)` | Add multiple items      | `lst.extend([20,30])` |\n",
+    "| `insert(i, x)`     | Insert at index         | `lst.insert(1, 5)`    |\n",
+    "| `remove(x)`        | Remove first occurrence | `lst.remove(5)`       |\n",
+    "| `pop(i)`           | Remove and return item  | `lst.pop(2)`          |\n",
+    "| `clear()`          | Remove all items        | `lst.clear()`         |\n",
+    "| `index(x)`         | Return index of item    | `lst.index(20)`       |\n",
+    "| `count(x)`         | Count occurrences       | `lst.count(10)`       |\n",
+    "| `sort()`           | Sort list               | `lst.sort()`          |\n",
+    "| `reverse()`        | Reverse order           | `lst.reverse()`       |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fffc4256",
+   "metadata": {},
    "source": []
   }
  ],
