--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -209,9 +209,53 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "fffc4256",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List comprehension\n",
+    "\n",
+    "squares = [x**2 for x in range(1, 6)]\n",
+    "print(squares)  # [1, 4, 9, 16, 25]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e4b60fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list comprehension with condition\n",
+    "\n",
+    "even_squares = [x**2 for x in range(10) if x % 2 == 0]\n",
+    "print(even_squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aa1f428",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
