explore: numpy array

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -252,8 +252,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0aa1f428",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20 30 40 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# array using numpy\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "myArray = np.array([10, 20, 30, 40])\n",
+    "print(myArray + 10)  # Vectorized operation: [20 30 40 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c970e88d",
    "metadata": {},
    "outputs": [],
    "source": []
