add some practice questions on arrays and lists

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -274,11 +274,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "c970e88d",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**🧠 Practice Questions:**\n",
+    "\n",
+    "- Write a program to find the largest and smallest elements in a list.\n",
+    "\n",
+    "- Remove all duplicate elements from a list without using set().\n",
+    "\n",
+    "- Write a Python program to count even and odd numbers in a list.\n",
+    "\n",
+    "- Create a list of squares of all odd numbers between 1 to 20.\n",
+    "\n",
+    "- Write a program to merge two sorted lists into one sorted list.\n",
+    "\n",
+    "- Find the frequency of each element in a list.\n",
+    "\n",
+    "- Write a function to rotate a list by k positions.\n",
+    "\n",
+    "- Find the intersection of two lists.\n",
+    "\n",
+    "- Write a program to find missing numbers in a sequence list.\n",
+    "\n",
+    "- Implement a function to check if a list is a palindrome."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4235a919",
+   "metadata": {},
    "source": []
   }
  ],
