find the number in a list greater than average of that list

--- a/day1-Array and List/arrayAndList.ipynb
+++ b/day1-Array and List/arrayAndList.ipynb
@@ -274,6 +274,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4cc3c979",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average:  55.0\n",
+      "Greater than average:  [60, 70, 80, 90, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find all numbers in a list that are greater than the average of the list.\n",
+    "\n",
+    "numberList = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "\n",
+    "avg = sum(numberList)/len(numberList)\n",
+    "print(\"Average: \", avg)\n",
+    "\n",
+    "greaterThanAverage = [x for x in numberList if x > avg ]\n",
+    "print(\"Greater than average: \",greaterThanAverage)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c970e88d",
    "metadata": {},
