explore: define a class node

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -5,7 +5,7 @@
    "id": "2a244d60",
    "metadata": {},
    "source": [
-    "### Linked List\n",
+    "# Linked List Discussion Part:\n",
     "\n",
     "- **A linked list** is a data structure that plays a crucial role in data organization and management. It contains a series of nodes that are stored at random locations in memory, allowing for efficient memory management. Each node in a linked list contains two main components: the data part and a reference to the next node in the sequence."
    ]
@@ -129,12 +129,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ffee5b92",
    "metadata": {},
+   "source": [
+    "# Singly Linked List Code Part:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69aaa270",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define a class node to describe a node of a singly linked list\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, item=None, next_node=None):\n",
+    "        self.item = item\n",
+    "        self.next = next_node\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
