define SSL and initialise the start value

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69aaa270",
    "metadata": {},
    "outputs": [],
@@ -149,8 +149,19 @@
     "    def __init__(self, item=None, next_node=None):\n",
     "        self.item = item\n",
     "        self.next = next_node\n",
-    "        "
+    "\n",
+    "class SSL:\n",
+    "    def __init__(self, start=None):\n",
+    "        self.start = start"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10669afd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
