create a class Node and with para: data and next_node along with the objects

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "69aaa270",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,12 @@
     "\n",
     "class SSL:\n",
     "    def __init__(self, start=None):\n",
-    "        self.start = start"
+    "        self.start = start\n",
+    "    def is_empty(self):\n",
+    "        return self.start == None\n",
+    "\n",
+    "# create object of SSL class\n",
+    "mylist = SSL()\n"
    ]
   },
   {
