explore: problem with singly linked list

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -130,6 +130,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ffe65ad",
+   "metadata": {},
+   "source": [
+    "#### Problem with singly linked list\n",
+    "\n",
+    "One disadvantage of singly-linked lists is that we can only traverse them in a single direction and cannot iterate back to the previous node if required. This constraint limits our ability to perform operations that require bidirectional navigation.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f4141ee",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ffee5b92",
    "metadata": {},
    "source": [
