make a node and insert at start

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -172,7 +172,8 @@
     "        self.start = start\n",
     "    def is_empty(self):\n",
     "        return self.start == None\n",
-    "\n",
+    "    def insert_at_start(self, data):\n",
+    "        n=Node(data, self.start)\n",
     "# create object of SSL class\n",
     "mylist = SSL()\n"
    ]
