create a class and initialize the value of data to zero

--- a/day3-Singly_Linked_List/singly-linked-list.ipynb
+++ b/day3-Singly_Linked_List/singly-linked-list.ipynb
@@ -154,6 +154,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40f75614",
+   "metadata": {},
+   "source": [
+    "![Questions](/Users/dilliramchaudhary/DSA-with-Python/day3-Singly_Linked_List/singly-linked-list-assignment.jpeg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "69aaa270",
@@ -174,6 +182,9 @@
     "        return self.start == None\n",
     "    def insert_at_start(self, data):\n",
     "        n=Node(data, self.start)\n",
+    "        self.start=n\n",
+    "    def insert_at_last(self, data):\n",
+    "        n = Node(data)\n",
     "# create object of SSL class\n",
     "mylist = SSL()\n"
    ]
