define the node class

--- a/day4-Doubly_Linked_List/doublyLinkedList.ipynb
+++ b/day4-Doubly_Linked_List/doublyLinkedList.ipynb
@@ -81,6 +81,32 @@
    "cell_type": "markdown",
    "id": "7509c0c0",
    "metadata": {},
+   "source": [
+    "#### Implementation from Scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316de2ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the Node Class\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.prev = None\n",
+    "        self.next = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "228243ae",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
