--- a/day4-Doubly_Linked_List/doublyLinkedList.ipynb
+++ b/day4-Doubly_Linked_List/doublyLinkedList.ipynb
@@ -103,8 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "228243ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the Doubly Linked List Class\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ece4fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -117,7 +131,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
