Insert a new node at the Beginning

--- a/day4-Doubly_Linked_List/doublyLinkedList.ipynb
+++ b/day4-Doubly_Linked_List/doublyLinkedList.ipynb
@@ -117,8 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b2ece4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insertion Operations\n",
+    "\n",
+    "# Insert at the Beginning\n",
+    "def insert_at_beginning(self, data):\n",
+    "    new_node = Node(data)\n",
+    "    if self.head is None:  # Empty list\n",
+    "        self.head = new_node\n",
+    "    else:\n",
+    "        new_node.next = self.head\n",
+    "        self.head.prev = new_node\n",
+    "        self.head = new_node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb98c8ac",
    "metadata": {},
    "outputs": [],
    "source": []
