--- a/day4-Doubly_Linked_List/doublyLinkedList.ipynb
+++ b/day4-Doubly_Linked_List/doublyLinkedList.ipynb
@@ -137,8 +137,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eb98c8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert at the End\n",
+    "\n",
+    "def insert_at_end(self, data):\n",
+    "    new_node = Node(data)\n",
+    "    if self.head is None:\n",
+    "        self.head = new_node\n",
+    "        return\n",
+    "\n",
+    "    temp = self.head\n",
+    "    while temp.next:\n",
+    "        temp = temp.next\n",
+    "    temp.next = new_node\n",
+    "    new_node.prev = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70373a9f",
    "metadata": {},
    "outputs": [],
    "source": []
